--- a/final-project.cabal
+++ b/final-project.cabal
@@ -56,6 +56,7 @@ executable final-project
       Controller
       Assets
       Collision
+      InitialState
 
     -- LANGUAGE extensions used by modules in this package.
     -- other-extensions:
