--- a/final-project.cabal
+++ b/final-project.cabal
@@ -57,12 +57,13 @@ executable final-project
       Assets
       Collision
       InitialState
+      LevelCodec
 
     -- LANGUAGE extensions used by modules in this package.
     -- other-extensions:
 
     -- Other library packages from which modules are imported.
-    build-depends:    base ^>=4.18.3.0, gloss, containers
+    build-depends:    directory ^>=1.3.8.5, base ^>=4.18.3.0, gloss, containers, bytestring, directory
 
     -- Directories containing source files.
     hs-source-dirs:   app
