Added new sprites for entities (most currently unused) Implemented animation system for entities Collider tags for entities only store entity ID (not the entire entity anymore) Added question block that spawns a powerup entity (which has no effect yet, just dissapears on contact) (Powerup update function is identical to goomba's, should abstract this with a typeclass) Added default constants for entities

--- a/final-project.cabal
+++ b/final-project.cabal
@@ -20,6 +20,8 @@ executable final-project
     other-modules:
       Model.Types
       Model.Config
+      Model.World
+      Model.Entity
       Model.Collider
       Model.InitialState
       View
@@ -42,3 +44,4 @@ executable final-project
     default-extensions:
       NamedFieldPuns
       RecordWildCards
+      LambdaCase
