Fixed UI positioning and added a golden heart to replace the 'x' character in the lives display Fix warnings generated by compiler. Move states into a separate file from types to reduce clutter. Added comments

--- a/final-project.cabal
+++ b/final-project.cabal
@@ -17,6 +17,7 @@ executable final-project
 
     other-modules:
       Model.Types
+      Model.TypesState
       Model.Config
       Model.World
       Model.Entity
