Moved map logic to separate controller file Updated comments Added new level segment and updated built-in-levels to be more interesting and include koopas

--- a/final-project.cabal
+++ b/final-project.cabal
@@ -42,6 +42,7 @@ executable final-project
       Controller.Input
       Controller.Collision
       Controller.Movement
+      Controller.WorldMap
       MathUtils
       Assets
       LevelCodec
