Move builder-related input functions from Controller/Input into Controller/InputBuilder

--- a/final-project.cabal
+++ b/final-project.cabal
@@ -44,6 +44,7 @@ executable final-project
       Controller.WorldMap
       Controller.Input
       Controller.InputMenu
+      Controller.InputBuilder
       MathUtils
       Assets
       LevelCodec
